Redirect address link to google maps location. Change heading text size on testimony cards heading

--- a/index.html
+++ b/index.html
@@ -225,9 +225,7 @@
         <ul>
           <li>
             <img src="./img/map-marker-icon.svg" alt="" />
-            <a
-              href="https://www.airbnb.com/rooms/15986679?source_impression_id=p3_1588301744_XBiiI8IN%2BpZRTLAy&guests=1&adults=1"
-              target="_blank"
+            <a href="https://goo.gl/maps/VXa7ZJP47zpeDjJs7" target="_blank"
               >Calle J #306 e/ Avenida de las Américas y Calle 6ta, Reparto
               Sueño, Santiago de Cuba, Cuba.</a
             >
